# general_researcher

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  promptfoo_helpers.py  promptfoo_provider.py  promptfooconfig.yaml  pyproject.toml
.github/: copilot-instructions.md
src/: eval.py  main.py  run_architecture.py
src/agents/: __init__.py  acp_client.py  client.py  critic.py  planner.py  researcher.py  smart_inventory_advisor.py  source_worker.py  synthesizer.py
src/architectures/: __init__.py  acp_agent.py  common.py  hybrid_p2p.py  multi_agent.py  plan_and_execute.py  researcher_critic.py  single_agent.py  supervisor_worker.py
src/data_sources/: __init__.py  base.py  congress.py  datagov.py  federal_register.py
src/evaluation/: __init__.py  azure_evaluators.py  dsl.py  llm_judge.py  runner.py  scenarios.py  steps.py
src/tools/: __init__.py  search_tools.py
src/utils/: __init__.py  tracing.py
tests/: test_sources.py
